# upnpmediabrowser

./: Makefile.am  README.md  autogen.sh  configure.ac
data/: Makefile.am  Makefile.in  upnpmediabrowser.desktop  upnpmediabrowser.gresource.xml  upnpmediabrowser.gschema.xml
data/ui/: browsetreeview.ui  devicestreeview.ui  settings.ui  toolbar_box.ui  toolbar_box.ui~  window.ui
po/: POTFILES.in  de.po
src/: Makefile.am  application.vala  browse_treeview.vala  common.vala  config.h  config.h.in  config.vapi  devices_treeview.vala  mediarenderer_toolbar.vala  settings_dialog.vala  upnp_device.vala  window.vala
